[gd_scene load_steps=4 format=2]

[ext_resource path="res://motion_ai/common/tasking/core/TaskTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://motion_ai/common/tasking/FleeImmediateThreat.gd" type="Script" id=2]
[ext_resource path="res://motion_ai/common/tasking/actions/FleeAllBody.tscn" type="PackedScene" id=3]


[node name="FleeImmediateThreat" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="FleeAllBody" parent="." index="0" instance=ExtResource( 3 )]
priority_area = 1
group_category = 1
dynamic_flee_vector = true
[connection signal="action_failure" from="FleeAllBody" to="." method="_on_FleeAllBody_action_failure"]
[connection signal="action_success" from="FleeAllBody" to="." method="_on_FleeAllBody_action_success"]
